# MarsClone

./: .gitignore  README.md  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/seasonfif/marsdemo/: MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
mars/: build.gradle
mars/src/main/: AndroidManifest.xml
mars/src/main/cpp/: CMakeLists.txt  jni_handler.cc  jni_handler.h  mars.cc  mars.h  mars_connect.cc  mars_connect.h
mars/src/main/cpp/comn/: CMakeLists.txt  library_loader.cc  log.h
mars/src/main/java/com/seasonfif/mars/: JNIHandler.java  MyClass.java
mars/src/main/res/values/: strings.xml
